<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
    <item
        android:id="@+id/bt_sw"
        app:showAsAction="always"
        android:icon="@drawable/bt_icon_off_128_tr"
        android:title="@string/BT_SW"/>
    <item
        android:id="@+id/bt_devices"
        android:checkable="true"
        app:showAsAction="ifRoom"
        android:title="@string/BT_DEVICES">
        <menu></menu>
        <!--group android:id="@+id/grp" android:checkableBehavior="all">
        </group-->
    </item>
    <!--item
        android:id="@+id/item3"
        android:icon="@android:drawable/ic_menu_info_details"
        app:showAsAction="ifRoom|withText"
        android:title="@string/item3" />
    <group android:id="@+id/grp" android:checkableBehavior="all">
        <item
            android:id="@+id/item4"
            android:icon="@android:drawable/ic_menu_view"
            app:showAsAction="never"
            android:title="@string/item4" />
        <item
            android:id="@+id/item5"
            android:icon="@android:drawable/ic_menu_view"
            app:showAsAction="never"
            android:title="@string/item5">
            <menu>
                <group android:checkableBehavior="single">
                    <item android:id="@+id/item5_1"
                        android:title="Submenu 5_1"
                        app:showAsAction="never"/>
                    <item android:id="@+id/item5_2"
                        android:title="Submenu 5_2"
                        app:showAsAction="never"/>
                    <item android:id="@+id/item5_3"
                        android:title="Submenu 5_3"
                        app:showAsAction="never" />
                </group>
            </menu>
        </item>
    </group-->
    <item
        android:id="@+id/exit"
        android:icon="@android:drawable/ic_menu_view"
        app:showAsAction="never"
        android:title="@string/EXIT">
    </item>
</menu>